--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -258,6 +258,7 @@ form {
 
 nav
 {
+	position: center;
 	background-color: black;
 	text-align: left;
 	-webkit-box-shadow: inset 0px 10px 29px 0px rgba(117,116,117,1);
@@ -287,7 +288,7 @@ nav ul li a
 {
 	display: block;
 	text-decoration: none;
-	color: red;
+	color: white;
 	padding: 10px 25px;
 	box-shadow: inset -1px 0px gray;
 }
